# spoticast

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
spoticast/: __main__.py  cache.py  config.py  episodes.py  server.py
spoticast/api/: audio.py  gemini.py  lastfm.py  research.py  spotify.py  tts.py
spoticast/web/: index.html  player.js  styles.css
